# legit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-lock.txt  wrangler.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_benchmark.md  scoring_dispute.md
.github/workflows/: ci.yml  deploy.yml  publish.yml
api/: badge.ts  og.ts  quota.ts  score-worker.ts  submit.ts
docs/: add-new-benchmark.md  api-reference.md  contribute-tasks.md  faq.md  how-scoring-works.md
examples/: README.md  minimal_agent.py
src/getlegit/: __init__.py
src/getlegit/benchmarks/v1/: config.yaml
src/getlegit/benchmarks/v1/mock_server/: __init__.py  server.py
src/getlegit/cli/: config.py  display.py  main.py  runner.py
src/getlegit/cli/commands/: costs.py  explain.py  init_cmd.py  run.py  submit.py
src/getlegit/judges/: elo.py  scoring.py
src/getlegit/judges/layer1/: checkers.py  verifier.py
src/getlegit/judges/layer2/: aggregate.py  judge.py
src/getlegit/judges/layer2/prompts/: analyze.md  base.md  code.md  extract.md  operate.md  research.md  write.md
web/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
web/src/components/: Badge.jsx  CategoryBar.jsx  EloHistory.jsx  RadarChart.jsx  ScoreCard.jsx
web/src/layouts/: Layout.astro
web/src/lib/: scoring.ts  supabase.ts
web/src/pages/: about.astro  index.astro  leaderboard.astro  submit.astro
web/src/pages/agent/: [id].astro
web/src/pages/card/: [id].astro
(+264 files in other folders)
